# elf_inspector

./: CMakeLists.txt  main.c
example/: elf_exe
inc/: elf_file.h  mem_map_file.h
src/: elf_file.c  mem_map_file_linux.c  mem_map_file_win.c
